# servantWithBeam

./: .ghcid  .gitignore  Controllers.hs  Main.hs  Models.hs  Prelude.hs  Procfile  README.org  Servers.hs  app.cabal  cabal.js.project  cabal.project  cabal.project.frontend  cabal.project.frontend.88up  cabal.project.local  cabal.project.useWarp  cabal.project.webkit2gtk  default.nix  flake.nix  hie.yaml  mobile-release.nix  netlify.toml  release.nix  servant-with-beam.cabal  shell.nix  test.http
.github/workflows/: backend.yml  ci.yml  deploy.yml  frontend.yml  main.yml
Controllers/: ErasedMarks.hs  Handlers.hs  Hitmen.hs  Home.hs  Marks.hs  PursuingMarks.hs  Util.hs  Utils.hs
Databases/: HitmenBusiness.hs
Databases/HitmenBusiness/: ErasedMarks.hs  Handlers.hs  Hitmen.hs  Marks.hs  PursuingMarks.hs
Databases/HitmenBusiness/Util/: Chronos.hs  JSON.hs  Types.hs
Databases/HitmenBusiness/Utils/: Auth.hs  Chronos.hs  Email.hs  JSON.hs  Password.hs  Types.hs
Models/: HitmenBusiness.hs
Servers/: Home.hs
Typeclass/: Base.hs  Meta.hs
Util/: Client.hs  Docs.hs  Migration.hs
Utils/: Account.hs  CRUD.hs  Client.hs  Constraints.hs  Docs.hs  FromAccount.hs  Meta.hs  Migration.hs  QueryRunner.hs  Types.hs
Utils/Account/: Auth.hs  Login.hs  SignUp.hs
Utils/CRUD/: CreateRoute.hs  DeleteRoute.hs  ReadRoute.hs  UpdateRoute.hs
app/: Main.hs
backend/: .ghcid  shell.nix
backend/app/: Main.hs
backend/src/Controllers/: Hitmen.hs
backend/src/Databases/: HitmenBusiness.hs
backend/src/Databases/HitmenBusiness/: Handlers.hs  Hitmen.hs  PursuingMarks.hs
backend/src/Databases/HitmenBusiness/Utils/: Chronos.hs  JSON.hs
backend/src/Servers/: Home.hs
backend/src/Utils/: CRUD.hs  Constraints.hs  Docs.hs  Meta.hs  QueryRunner.hs
backend/src/Utils/Account/: Auth.hs
backend/tests/: Main.hs
frontend/: .ghcid  Main.hs  frontend.cabal  servant-with-beam-frontend.cabal  shell.nix
frontend/app/: Main.hs
frontend/src/Utils/: Animate.hs  Common.hs  Components.hs  Head.hs
frontend/src/Utils/Bulma/: Elements.hs
frontend/src/Utils/Bulma/Components/: Breadcrumb.hs  Card.hs  Dropdown.hs  Menu.hs  Message.hs  Modal.hs  Navbar.hs  Pagination.hs  Panel.hs  Tabs.hs
frontend/src/Widgets/: Currency.hs  Timer.hs  Tomato.hs
nix/: libpq_paths.patch  pkgs.nix  postgresql-prebuild.nix  sources.json
project.frontend.materialized/: cabal-configure.out  default.nix
project.frontend.materialized/.plan.nix/: servant-with-beam.nix
project.materialized/: default.nix
project.materialized/.plan.nix/: servant-with-beam.nix
scripts/: Main.hs
scripts/Migration/Databases/: HitmenBusiness.hs
scripts/Migration/Databases/HitmenBusiness/: Handlers.hs
scripts/Migration/Utils/: Chronos.hs  Email.hs  Types.hs
src/Databases/: HitmenBusiness.hs
src/Databases/HitmenBusiness/: ErasedMarks.hs  Handlers.hs  Hitmen.hs  Marks.hs  PursuingMarks.hs
src/Databases/HitmenBusiness/Utils/: Chronos.hs  Email.hs  Types.hs
src/Utils/: Client.hs  FromAccount.hs  Types.hs
src/Utils/Account/: Auth.hs  SignUp.hs
