name:                app
version:             0.1.0.0
synopsis:            Toy web app
description:         Toy web app
homepage:            https://github.com/fanshi1028/servantWithBeam
license:             MIT
author:              Francis Chan
maintainer:          jackychany321@gmail.com
copyright:           Francis Chan (c) 2015-2018
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

executable app
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  other-modules:       Servers
                       Servers.Home
                       Controllers
                       Controllers.Hitmen
                       Controllers.Handlers
                       Controllers.Marks
                       Controllers.PursuingMarks
                       Controllers.ErasedMarks
                       Controllers.Util
                       Databases.HitmenBusiness
                       Databases.HitmenBusiness.Hitmen
                       Databases.HitmenBusiness.Handlers
                       Databases.HitmenBusiness.Marks
                       Databases.HitmenBusiness.PursuingMarks
                       Databases.HitmenBusiness.ErasedMarks
                       Databases.HitmenBusiness.Util.Chronos
                       Databases.HitmenBusiness.Util.Types
                       Databases.HitmenBusiness.Util.JSON
                       Models
                       Models.HitmenBusiness
                       Typeclass.Base
                       Util.Client
                       Util.Docs
                       Util.Migration
  build-depends:       base >= 4.9,
                       bytestring >= 0.10.10,
                       time >= 1.9,
                       unordered-containers >= 0.2.13,
                       servant-server >= 0.18,
                       servant-client >= 0.18,
                       servant-docs >= 0.11,
                       servant-swagger >= 1.1,
                       http-types >= 0.12,
                       http-client < 0.7,
                       wai >= 3.2.2,
                       warp >= 3.3.10,
                       wai-extra >=3.0.0,
                       wai-middleware-static >= 0.9.0,
                       text >= 1.2.4,
                       aeson >= 1.4,
                       haxl >= 2.3,
                       chronos >= 1.1,
                       beam-core >= 0.9.0.0,
                       beam-sqlite >= 0.5.0.0,
                       beam-postgres >= 0.5.0.0,
                       beam-migrate >= 0.5.0.0,
                       postgresql-simple >= 0.6 && < 0.7,
                       sqlite-simple >= 0.4.0.0,
                       generic-lens >= 2.0.0.0,
                       microlens >= 0.4.11.0,
                       lens >= 4.19,
                       beam-automigrate >= 0.1.1.0,
                       mtl >= 2.2
  default-language:    Haskell2010

source-repository head
   type: git
   location: https://github.com/fanshi1028/servantWithBeam
