name:                app
version:             0.1.0.0
synopsis:            Toy web app
description:         Toy web app
homepage:            https://github.com/fanshi1028/servantWithBeam
license:             MIT
author:              Francis Chan
maintainer:          jackychany321@gmail.com
copyright:           Francis Chan (c) 2015-2018
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

executable app
  main-is:             Main.hs
  other-modules:       Servers
                       Servers.Home
                       Controllers
                       Controllers.Hitmen
                       Controllers.Handlers
                       Controllers.Marks
                       Controllers.PursuingMarks
                       Controllers.ErasedMarks
                       Databases.HitmenBusiness
                       Databases.HitmenBusiness.Hitmen
                       Databases.HitmenBusiness.Handlers
                       Databases.HitmenBusiness.Marks
                       Databases.HitmenBusiness.PursuingMarks
                       Databases.HitmenBusiness.ErasedMarks
                       Databases.HitmenBusiness.Utils.Chronos
                       Databases.HitmenBusiness.Utils.Types
                       Databases.HitmenBusiness.Utils.JSON
                       Databases.HitmenBusiness.Utils.Email
                       Databases.HitmenBusiness.Utils.Password
                       Models
                       Models.HitmenBusiness
                       Typeclass.Base
                       Utils.Client
                       Utils.Docs
                       Utils.Migration
                       Utils.CRUD
                       Utils.Account.Login
  build-depends:       base >= 4.14.1.0,
                       universum >= 1.7,
                       bytestring >= 0.10.10,
                       password >= 2.1,
                       validation-selective >= 0.1,
                       time >= 1.9,
                       addy >= 0.1,
                       unordered-containers >= 0.2.13,
                       servant-server >= 0.18,
                       servant-client >= 0.18,
                       servant-docs >= 0.11,
                       servant-swagger >= 1.1,
                       http-types >= 0.12,
                       http-client < 0.7,
                       wai >= 3.2.2,
                       warp >= 3.3.10,
                       wai-extra >=3.0.0,
                       wai-middleware-static >= 0.9.0,
                       text >= 1.2,
                       aeson >= 1.4,
                       haxl >= 2.3,
                       chronos >= 1.1,
                       beam-core >= 0.9.0.0,
                       beam-sqlite >= 0.5.0.0,
                       beam-postgres >= 0.5.0.0,
                       beam-migrate >= 0.5.0.0,
                       postgresql-simple >= 0.6 && < 0.7,
                       sqlite-simple >= 0.4.0.0,
                       generic-lens >= 2.0.0.0,
                       microlens >= 0.4.11.0,
                       lens >= 4.19,
                       beam-automigrate >= 0.1.1.0,
                       mtl >= 2.2
  default-language:    Haskell2010
  default-extensions: OverloadedStrings
                      TypeApplications
                      LambdaCase
                      NoImplicitPrelude

source-repository head
   type: git
   location: https://github.com/fanshi1028/servantWithBeam
