cabal-version: >=1.10
name:          app
version:       0.1.0.0
license:       MIT
copyright:     Francis Chan (c) 2015-2018
maintainer:    jackychany321@gmail.com
author:        Francis Chan
homepage:      https://github.com/fanshi1028/servantWithBeam
synopsis:      Toy web app
description:   Toy web app
category:      Web
build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/fanshi1028/servantWithBeam

executable app
    main-is:            Main.hs
    other-modules:
        Servers
        Servers.Home
        Controllers
        Controllers.Hitmen
        Controllers.Handlers
        Controllers.Marks
        Controllers.PursuingMarks
        Controllers.ErasedMarks
        Databases.HitmenBusiness
        Databases.HitmenBusiness.Hitmen
        Databases.HitmenBusiness.Handlers
        Databases.HitmenBusiness.Marks
        Databases.HitmenBusiness.PursuingMarks
        Databases.HitmenBusiness.ErasedMarks
        Databases.HitmenBusiness.Utils.Chronos
        Databases.HitmenBusiness.Utils.Types
        Databases.HitmenBusiness.Utils.JSON
        Databases.HitmenBusiness.Utils.Email
        Databases.HitmenBusiness.Utils.Password
        Databases.HitmenBusiness.Utils.Auth
        Models
        Models.HitmenBusiness
        Utils.Types
        Utils.Meta
        Utils.QueryRunner
        Utils.Client
        Utils.Docs
        Utils.Migration
        Utils.Account
        Utils.FromAccount
        Utils.CRUD
        Utils.CRUD.CreateRoute
        Utils.CRUD.ReadRoute
        Utils.CRUD.UpdateRoute
        Utils.CRUD.DeleteRoute
        Utils.Constraints
        Utils.Account.Login
        Utils.Account.Auth
        Utils.Account.SignUp

    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings TypeApplications LambdaCase NoImplicitPrelude
        StrictData

    ghc-options:
        -W -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wcompat -Wnoncanonical-monad-instances

    build-depends:
        base >=4.14.1.0 && <4.15,
        universum ==1.7.*,
        bytestring >=0.10.10 && <0.11,
        password ==2.1.*,
        validation-selective ==0.1.*,
        zxcvbn-hs ==0.3.*,
        time ==1.9.*,
        addy ==0.1.*,
        unordered-containers >=0.2.13 && <0.3,
        servant-server ==0.18.*,
        servant-client ==0.18.*,
        servant-docs ==0.11.*,
        servant-auth ==0.4.*,
        servant-auth-server >=0.4.6.0 && <0.5,
        servant-auth-docs >=0.2.10.0 && <0.3,
        servant-auth-client ==0.4.*,
        http-types ==0.12.*,
        http-client >=0.6.4.1 && <0.7,
        wai >=3.2.2 && <3.3,
        warp >=3.3.10 && <3.4,
        wai-extra >=3.0.0 && <3.2,
        wai-middleware-static >=0.9.0 && <0.10,
        text ==1.2.*,
        aeson ==1.4.*,
        chronos ==1.1.*,
        beam-core >=0.9.0.0 && <0.10,
        beam-sqlite >=0.5.0.0 && <0.6,
        beam-postgres >=0.5.0.0 && <0.6,
        beam-migrate >=0.5.0.0 && <0.6,
        postgresql-simple ==0.6.*,
        sqlite-simple >=0.4.0.0 && <0.5,
        generic-lens >=2.0.0.0 && <2.1,
        microlens >=0.4.11.0 && <0.5,
        lens ==4.19.*,
        beam-automigrate >=0.1.1.0 && <0.2,
        ekg ==0.4.*,
        mtl ==2.2.*,
        natural-transformation ==0.4.*,
        envy >=2.1.0.0 && <2.2,
        resource-pool >=0.2.3.2 && <0.3,
        unliftio >=0.2.13.1 && <0.3,
        unliftio-pool >=0.2.1.1 && <0.3,
        co-log >=0.4.0.1 && <0.5
