cabal-version: 3.0
name:          servant-with-beam
version:       0.1.0.0
license:       MIT
copyright:     Francis Chan (c) 2020-2021
maintainer:    jackychany321@gmail.com
author:        Francis Chan
homepage:      https://github.com/fanshi1028/servantWithBeam
synopsis:      Web app
description:   Web app
category:      Web
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/fanshi1028/servantWithBeam

flag ghcid
  default: False
  manual:  True

flag frontend
  default: False
  manual:  True

common prelude
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    LambdaCase
    OverloadedStrings
    StrictData
    TypeApplications

  ghc-options:
    -W -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Wnoncanonical-monad-instances -O2

  build-depends:
    , base       >=4.12 && <4.17
    , universum  ^>=1.7

common backend-common
  import:   prelude

library backend-internal
  import:      backend-common

  hs-source-dirs:  backend/src

  if flag(frontend)
    buildable: False

executable backend
  if flag(ghcid)
    import:         backend-common
    hs-source-dirs: backend/src

  else
    build-depends:
        , backend-internal

  if flag(frontend)
    buildable: False

  main-is:        Main.hs
  hs-source-dirs: backend/app

  ghc-options:    -threaded

common frontend-common
  import:  prelude
  if !flag(frontend)
    buildable: False

library frontend-internal
  import:         frontend-common
  hs-source-dirs: frontend/src

executable frontend
  if flag(ghcid)
    import:         frontend-common
    hs-source-dirs: frontend/src

  else
    build-depends:
      , frontend-internal

  hs-source-dirs: frontend/app
  main-is:        Main.hs

  ghcjs-options:  -dedupe -DGHCJS_BROWSER
  ghc-options:  -threaded
  if !impl(ghcjs) && (os(osx) || os(ios))
    ghc-options:  -dynamic
