cabal-version: >= 2.0
name:          frontend
version:       0.1.0.0
license:       MIT
copyright:     Francis Chan (c) 2021-2022
maintainer:    jackychany321@gmail.com
author:        Francis Chan
homepage:      https://github.com/fanshi1028/servantWithBeam
synopsis:      Web app frontend
description:   Web app frontend
category:      Web
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/fanshi1028/servantWithBeam

common prelude

executable frontend
  main-is:        Main.hs
  hs-source-dirs: app

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    LambdaCase
    OverloadedStrings
    StrictData
    TypeApplications

  build-depends:
      base       >=4.12 && <4.17
    , universum  ^>=1.7
    , containers  ^>=0.6
    , generic-lens
    , text        ^>=1.2
    , chronos
    , file-embed
    , reflex      ^>=0.8
    , reflex-dom  ^>=0.6

  ghcjs-options:  -dedupe
  ghc-options:
    -W -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Wnoncanonical-monad-instances -O2 -threaded
  if os(darwin)
     ghc-options: -dynamic
