cabal-version: >=2.0
name:          servant-with-beam-frontend
version:       0.1.0.0
license:       MIT
copyright:     Francis Chan (c) 2020-2021
maintainer:    jackychany321@gmail.com
author:        Francis Chan
homepage:      https://github.com/fanshi1028/servantWithBeam
synopsis:      Web app
description:   Web app
category:      Web
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/fanshi1028/servantWithBeam

executable frontend
  import:         prelude
  main-is:        Main.hs
  hs-source-dirs: app

  build-depends:
    base       >=4.12 && <4.17,
    universum  ^>=1.7,
    containers  ^>=0.6,
    generic-lens,
    text        ^>=1.2,
    chronos,
    clay,
    file-embed,
    reflex      ^>=0.8,
    reflex-dom  ^>=0.6

  ghc-options:
    -W -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Wnoncanonical-monad-instances -O2 -threaded

  if !impl(ghcjs) && (os(osx) || os(ios))
    ghc-options:  -dynamic

  ghcjs-options:  -dedupe -DGHCJS_BROWSER

  default-language:   Haskell2010

  default-extensions:
    NoImplicitPrelude
    LambdaCase
    OverloadedStrings
    StrictData
    TypeApplications
